# agent-skill

./: .gitignore  CLAUDE.md  Makefile  README.md  link_skills.py  pyproject.toml  skills_config.toml  test_link_skills.py  user.md
.claude/: settings.local.json
architect/: SKILL.md
architect/assets/: edd_template.md
be/: SKILL.md
committer/: SKILL.md
fe/: SKILL.md
pm/: SKILL.md
pm/assets/: prd_template.md  user_story_template.md
qa/: SKILL.md
qa/assets/: test_case_example_api.md  test_case_example_ui.md  test_case_template.md
qa/references/: integration_test_guide.md
sde/: SKILL.md
sde/references/: go.md
skill-creator/: SKILL.md
skill-creator/scripts/: init_skill.py  package_skill.py  quick_validate.py
skills/architect/: SKILL.md
skills/architect/references/: edd-template.md
skills/backend-engineer/: SKILL.md
skills/backend-engineer/assets/: implementation-plan-template.md
skills/committer/: SKILL.md
